--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,6 @@ header {
     margin: 0;
   }
   .container-right {
-    display: block;
     height: auto;
     width: 100%;
     position: static;
@@ -111,6 +110,8 @@ header {
   img {
     position: static;
     max-width: 90%;
+    margin: 0 auto;
+    display: block;
   }
 
   header {
