--- a/styles.css
+++ b/styles.css
@@ -1,147 +1,122 @@
 * {
+  color: #5d5d7d;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Oswald", sans-serif;
-  color: #5d5d7d;
-  font-weight: 400;
-}
-
-.container {
-  height: 100vh;
-  width: 100vw;
+  font-family: "Oswald", sans-seri;
 }
 
 .container-left {
+  width: 60vw;
   display: inline-block;
-  width: 60%;
-  padding-left: 136px;
-  margin-top: 25%;
+  margin-top: 360px;
+  padding-left: 80px;
 }
 
-.container-right {
-  display: inline-block;
-  background-color: rgba(93, 93, 125, 0.16);
-  /*rgba(RED , GREEN , BLUE E OPACITY)*/
-  height: 100vh;
-  width: 40%;
-  position: absolute;
-}
-
-img {
-  position: relative;
-  top: 20%;
-  right: 130px;
-}
-
-h1 {
+.container-left h1 {
   font-size: 70px;
+  font-weight: 400;
   line-height: 80px;
   width: 368px;
 }
 
-p {
+.container-left p {
   font-size: 28px;
   line-height: 48px;
+  font-weight: 400;
   width: 540px;
   opacity: 0.6;
-  margin: 15px 0;
+  margin: 10px 0;
 }
 
-button {
+.container-left .button-left {
+  color: #ffffff;
+  font-weight: 400;
+  font-size: 24px;
+  background-color: #9499ea;
+  border-radius: 30px;
+  cursor: pointer;
+  border: none;
   width: 269px;
   height: 62px;
-  color: #fff;
-  text-align: center;
-  font-size: 24px;
-  line-height: 36px;
-  border: none;
-  background: #9499ea;
-  border-radius: 30px;
-  box-shadow: 0px 10px 24px rgba(148, 153, 234, 0.1);
-  cursor: pointer;
 }
 
-button:hover {
-  opacity: 0.8;
+.container-left .button-left:hover {
+  opacity: 0.7;
 }
 
-button:active {
+.container-left .button-left:active {
   opacity: 0.5;
 }
 
-a {
+.container-right {
+  display: inline-block;
+  background-color: rgba(93, 93, 125, 0.4);
+  width: 40vw;
+  height: 100vh;
+  position: absolute;
+}
+
+.container-right header {
+  margin: 25px 0 0 50px;
+}
+
+.container-right .link-header {
   font-size: 28px;
-  line-height: 41px;
-  margin-right: 41px;
+  font-weight: 400;
   cursor: pointer;
+  margin-right: 30px;
 }
 
-a:nth-child(2) {
-  opacity: 0.4;
+.container-right .link-header:nth-child(2) {
+  opacity: 0.7;
 }
 
-a:hover {
-  opacity: 0.4;
-}
-
-a:active {
-  opacity: 0.8;
-}
-
-header {
-  margin: 24px 0 0 57px;
+.container-right .logo-img {
+  position: relative;
+  top: 10%;
+  right: 145px;
+  max-width: 90%;
 }
 
 @media screen and (max-width: 1140px) {
   .container-left {
-    width: 100%;
-    height: 50%;
-    padding: 0;
-    margin: 0;
-  }
-  .container-right {
-    height: auto;
-    width: 100%;
-    position: static;
-    padding: 40px;
-  }
-
-  img {
-    position: static;
-    max-width: 90%;
-    margin: 0 auto;
+    height: 45vh;
+    width: 100vw;
     display: block;
+    margin: 70px 0 0 0;
+    padding: 0;
+    text-align: center;
   }
 
-  header {
-    display: none;
-  }
-
-  h1 {
+  .container-left h1 {
+    width: auto;
     font-size: 36px;
     line-height: 52px;
-    width: auto;
-    margin: 58px 50px 0 50px;
-    text-align: center;
   }
 
-  p {
-    margin: 15px 40px;
+  .container-left p {
     width: auto;
-    text-align: center;
     font-size: 14px;
     line-height: 24px;
   }
 
-  button{
+  .container-right {
+    display: block;
+    height: 50vh;
+    width: 100vw;
+    position: static;
+  }
+
+  .container-right header {
+    display: none;
+  }
+
+  .container-right .logo-img {
+    position: static;
     margin: 0 auto;
     display: block;
-  }
-}
-
-@media screen and (max-width: 330px) {
-  .container-left{
-    height: 70%;
+    height: 100%;
+    padding: 30px 0;
   }
 }
